[gd_scene load_steps=13 format=2]

[ext_resource path="res://Stages/Gold Experience.gd" type="Script" id=1]
[ext_resource path="res://Game/StageManager.tscn" type="PackedScene" id=2]
[ext_resource path="res://Items/Maze.tscn" type="PackedScene" id=3]
[ext_resource path="res://Items/Words.tscn" type="PackedScene" id=4]
[ext_resource path="res://Items/Interactable.gd" type="Script" id=5]
[ext_resource path="res://Assets/Spot.png" type="Texture" id=6]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 86.4266, -72.0222, -86.4266, 72.0222, 542, 418, 0, 0, 0, 0, 287, 416, 0, 0, 0, 0, 285, 474, 0, 0, 0, 0, 130, 479 )
}

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 420, 420, 0, 0, 0, 0, 420, 670 )
}

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 930, 730, 0, 0, 0, 0, 930, 480, 0, 0, 0, 0, 730, 480, 28.8089, -37.6731, -28.8089, 37.6731, 740, 600, 46.5374, -23.2687, -46.5374, 23.2687, 580, 610, 6.6482, -15.5125, -6.6482, 15.5125, 540, 650, 0, 0, 0, 0, 480, 670, 0, 0, 0, 0, 442.848, 710.244 )
}

[sub_resource type="Curve2D" id=5]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 480, 850, -32.133, 37.5027, 32.133, -37.5027, 480, 780, -29.9169, -36.8208, 29.9169, 36.8208, 600, 770, 0, 0, 0, 0, 600, 840 )
}

[node name="Gold Experience" type="Node2D"]
script = ExtResource( 1 )
FLOWER_HUE = [ 0.85, 1.15 ]
FLOWER_SATURATION = [ 0.35, 0.75 ]
FLOWER_LIGHTNESS = [ 0.65, 0.8 ]

[node name="StageManager" parent="." instance=ExtResource( 2 )]
goal_position = Vector2( 1120, 800 )

[node name="Maze" parent="." instance=ExtResource( 3 )]
position = Vector2( 128, 0 )
tile_data = PoolIntArray( 327678, 1, 0, 327679, 1, 0, 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262152, 10, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262160, 1, 0, 262161, 1, 0, 327688, 0, 0, 393220, 3, 0, 393221, 1, 0, 393222, 10, 0, 393223, 1, 0, 393224, 5, 0, 524286, 1, 0, 524287, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 5, 0, 458758, 0, 0, 458763, 3, 0, 458764, 1, 0, 458765, 1, 0, 458766, 10, 0, 458767, 1, 0, 458768, 12, 0, 524294, 0, 0, 524299, 0, 0, 524302, 0, 0, 589830, 0, 0, 589833, 1, 0, 589834, 1, 0, 589835, 5, 0, 589838, 0, 0, 589840, 14, 0, 589841, 1, 0, 720894, 1, 0, 720895, 1, 0, 655360, 1, 0, 655363, 1, 0, 655364, 4, 0, 655366, 11, 0, 655374, 0, 0, 720900, 0, 0, 720908, 3, 0, 720909, 1, 0, 720910, 8, 0, 720911, 1, 0, 720912, 4, 0, 786436, 0, 0, 786439, 3, 0, 786440, 1, 0, 786441, 4, 0, 786444, 0, 0, 786448, 0, 0, 851972, 0, 0, 851975, 0, 0, 851977, 0, 0, 851980, 0, 0, 851982, 14, 0, 851983, 1, 0, 851984, 5, 0, 917508, 0, 0, 917511, 0, 0, 917513, 0, 0, 917516, 0, 0 )

[node name="Words" parent="." instance=ExtResource( 4 )]
position = Vector2( 719.639, 43.532 )
TEXT = "Wherever you go,
your memories from the
place you grew up in
always remain special."

[node name="Words2" parent="." instance=ExtResource( 4 )]
position = Vector2( 25.8471, 693.792 )
TEXT = "You don't have
to be born
beautiful to be
wildly attractive."

[node name="Memory" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 440, 70 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Memory"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Memory"]
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 6 )

[node name="Player" parent="." instance=ExtResource( 7 )]
position = Vector2( 440, 70 )

[node name="Paths" type="Node2D" parent="."]

[node name="Path2D2" type="Path2D" parent="Paths"]
position = Vector2( 129.108, 0.14325 )
curve = SubResource( 2 )

[node name="PathFollow2D" type="PathFollow2D" parent="Paths/Path2D2"]
position = Vector2( 542, 418 )
rotation = 2.46514

[node name="Path2D" type="Path2D" parent="Paths"]
position = Vector2( 123.568, 46.676 )
curve = SubResource( 3 )

[node name="PathFollow2D" type="PathFollow2D" parent="Paths/Path2D"]
position = Vector2( 420, 420 )
rotation = 1.5708

[node name="Path2D3" type="Path2D" parent="Paths"]
position = Vector2( 128, 0 )
curve = SubResource( 4 )

[node name="PathFollow2D" type="PathFollow2D" parent="Paths/Path2D3"]
position = Vector2( 930, 730 )
rotation = -1.57078

[node name="Path2D4" type="Path2D" parent="Paths"]
position = Vector2( 128, -425.728 )
scale = Vector2( 1, 1.625 )
curve = SubResource( 5 )

[node name="PathFollow2D" type="PathFollow2D" parent="Paths/Path2D4"]
position = Vector2( 480, 850 )
rotation = -2.27415

[node name="Plants" type="Node2D" parent="."]

[connection signal="started" from="StageManager" to="." method="_on_StageManager_started"]
[connection signal="typing_end" from="StageManager" to="." method="_on_StageManager_typing_end"]
[connection signal="interacted" from="Memory" to="." method="_on_Memory_interacted"]
